# collaborative-sats

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  SUPPORT.md  build.sh  frames.gv
data/: packages.txt  sim_commands.txt
data/calibration_files/: calibration.json  ip_calibration.json  ip_calibration.yaml  laptop_calibration.yaml  logitech_calibration.json  sim_calibration.json  sim_calibration.yaml  web_calibration.json  web_calibration.yaml
data/models/: SUPPORT.md
data/platform/: Assembly v2.f3z  frame.stl  platform.ino  platform.stl
data/plotjuggler-configs/: advance_mpc.xml  kalman.xml  mpc.xml  pid.xml  vicon.xml
data/ros1_bridge/: SUPPORT.md  master_1.bash  master_2.bash  sim_commands.txt  slave.bash
data/worlds/: calibration.world  lab.world  pid_test.world  scenarios_space.world  space.world  space_meteor.world  space_realistic.world
gazebo-plugins/: CMakeLists.txt  SUPPORT.md  chaser_controller.cc  test_plugin.cc
gazebo-plugins/test_plugin/: CMakeLists.txt
models/: README.md  SUPPORT.md
models/chaser/: chaser.urdf.xacro  dimensions.xacro  gazebo.xacro
models/chessboard/: chessboard.dae  chessboard.sdf
models/media/: README.md
plotjuggler-configs/: kalman.xml
src/: requirements.txt
src/stereo_cam/: README.md  SUPPORT.md  notes.md  package.xml  setup.cfg  setup.py
src/stereo_cam/launch/: full.launch.py  launch files notes.md  sim.launch.py  test.launch.py
src/stereo_cam/rviz_config/: stereo_cam.rviz
src/stereo_cam/stereo_cam/: disparity_example.py  disparity_publisher.py  disparity_viewer.py  disparity_viewer_.py  hello_world.py  notes.md  pcd_publisher.py  pcl_publisher.py  stereo_viewer.py
src/utils/: setup.py  (+2 more)
worlds/: calibration.world  lab.world  scenarios_space.world  sim_1  space.world  space_realistic.world  stereo_cam_testing_site  test1.world
(+197 files in other folders)
